BUG#33397 - ALTER TABLE into non-existing Falcon tablespace causes             vague error.

Creating or altering a table to non-existing tablespace returns
non-informative error message.

With this fix error message states that the tablespace doesn't
exist.

No test case needed for this fix - it is already covered by existing
tests.